crates/rome_formatter/tests/specs/prettier/range/module-export2.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 83
expression: module-export2.js

---
# Input
```js
import  def , {named}  from    'x'

export *  from   'd'
<<<PRETTIER_RANGE_START>>>
export    const  x
  <<<PRETTIER_RANGE_END>>>=  42

export   default    42


```

# Output
```js
import def, { named } from 'x';

export * from 'd';

<<<PRETTIER_RANGE_START>>>
export const x;

  <<<PRETTIER_RANGE_END>>>=  42

export default 42;

```

# Errors
```
error[SyntaxError]: expected a statement but instead found '<<<PRETTIER_RANGE_START>>>'
  ┌─ module-export2.js:4:1
  │
4 │ <<<PRETTIER_RANGE_START>>>
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^ Expected a statement here

error[SyntaxError]: Const var declarations must have an initialized value
  ┌─ module-export2.js:5:18
  │
5 │ export    const  x
  │                  ^ this variable needs to be initialized

error[SyntaxError]: expected a statement but instead found '<<<PRETTIER_RANGE_END>>>=  42'
  ┌─ module-export2.js:6:3
  │
6 │   <<<PRETTIER_RANGE_END>>>=  42
  │   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Expected a statement here


```


